--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <div class="footer-section">
                     <strong>Domaine</strong>
                     <span>Chercheur en IA</span>
-                    <span>Administration des Systems <br> et Reseaux</span>
+                    <span>Administration des <br> Systems et Reseaux</span>
                     <span>Solutions Digitales</span>
                 </div>
                 
