--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             
             <div class="chat-messages" id="chatMessages">
                 <div class="message bot-message">
-                    Bonjour ! Je suis votre assistant virtuel pour la cérémonie du Ballon d'Or. Posez-moi vos questions sur les gagnants, le lieu, la date, ou les éditions précédentes (2019-2025) !
+                    Bonjour ! Jason, votre assistant virtuel pour la cérémonie du Ballon d'Or et les trophees de la Kopa. Posez-moi vos questions sur les gagnants, le lieu, la date, ou les éditions précédentes (2019-2025) !
                 </div>
             </div>
             
