--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="2"/></svg>');
+            background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fnews.bet365.com%2Fen-gb%2Farticle%2F2025-ballon-dor-nominees-announced%2F2025080713341341190&psig=AOvVaw0NOkk1p3ojONzJBAxNQMa8&ust=1759949386579000&source=images&cd=vfe&opi=89978449&ved=0CBgQjhxqFwoTCIj1jsbgkpADFQAAAAAdAAAAABAL>');
             background-size: 200px 200px;
             opacity: 0.3;
             z-index: -1;
