--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         
         body {
-            background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
+            background: transparent;
             color: white;
             min-height: 100vh;
             display: flex;
