--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fnews.bet365.com%2Fen-gb%2Farticle%2F2025-ballon-dor-nominees-announced%2F2025080713341341190&psig=AOvVaw0NOkk1p3ojONzJBAxNQMa8&ust=1759949386579000&source=images&cd=vfe&opi=89978449&ved=0CBgQjhxqFwoTCIj1jsbgkpADFQAAAAAdAAAAABAL>');
-            background-size: 200px 200px;
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.7) 100%);
+            background-image: url('https://images.unsplash.com/photo-1575361204480-aadea25e6e68?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80');
+            background-size: cover;
+            background-position: center;
             opacity: 0.3;
             z-index: -1;
         }
